// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creation Form - Renders Correctly 1`] = `
<div>
  <vue-headful-stub
    description=""
    head="[object Object]"
    title="Munro - Create League"
  />
   
  <div
    class="w-10/12 mx-auto md:w-3/4 xl:w-2/3 md:mt-2"
  >
    <h1
      class="my-2 text-3xl font-bold md:text-35xl font-heading text-main-700"
    >
      
    Create League
  
    </h1>
     
    <div
      class="grid grid-cols-2 gap-8 pb-8 md:gap-6 lg:gap-8"
    >
      <form
        class="col-span-2"
      >
        <div>
          <label
            class="block pb-1 select-none font-heading text-main-600"
            for="Name:"
          >
            Name:
          </label>
           
          <input
            class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
            id="Name:"
            type="text"
          />
        </div>
         
        <div
          class="mt-4"
        >
          <label
            class="block pb-1 select-none font-heading text-main-600"
            for="Year:"
          >
            Year:
          </label>
           
          <input
            class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
            id="Year:"
            max="2050"
            min="0"
            type="number"
          />
        </div>
         
        <div
          class="mt-4"
        >
          <label
            class="block pb-1 select-none font-heading text-main-600"
            for="Description:"
          >
            Description:
          </label>
           
          <input
            class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
            id="Description:"
            type="text"
          />
        </div>
         
        <div
          class="mt-4"
        >
          <label
            class="block pb-1 select-none font-heading text-main-600"
            for="Website: (URL)"
          >
            Website: (URL)
          </label>
           
          <input
            class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
            id="Website: (URL)"
            type="url"
          />
        </div>
         
        <div
          class="mt-4"
        >
          <label
            class="block pb-1 select-none font-heading text-main-600"
            for="Coordinator:"
          >
            Coordinator:
          </label>
           
          <input
            class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
            id="Coordinator:"
            type="text"
          />
        </div>
         
        <div
          class="relative mt-4"
        >
          <label
            class="block pb-1 select-none font-heading text-main-600"
            for="Scoring Method:"
          >
            
    Scoring Method:
  
          </label>
           
          <svg
            class="absolute bottom-0 right-0 h-6 mr-2 text-main-500"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            style="margin-bottom: 0.625rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 9l-7 7-7-7"
            />
          </svg>
           
          <select
            class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none appearance-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
            id="Scoring Method:"
          >
            <option />
             
            <option
              value="Position Based (100 Max)"
            >
              
        Position Based (100 Max)
      
            </option>
            <option
              value="Position Based (99 Max)"
            >
              
        Position Based (99 Max)
      
            </option>
            <option
              value="Position Based (50 Max)"
            >
              
        Position Based (50 Max)
      
            </option>
            <option
              value="Position Based (100 Max, Double Points)"
            >
              
        Position Based (100 Max, Double Points)
      
            </option>
            <option
              value="Position Based (50 Max, Double Points)"
            >
              
        Position Based (50 Max, Double Points)
      
            </option>
            <option
              value="Position Based (99 Max, Reduced in a Draw)"
            >
              
        Position Based (99 Max, Reduced in a Draw)
      
            </option>
            <option
              value="Relative to Average Time (1000 Average)"
            >
              
        Relative to Average Time (1000 Average)
      
            </option>
            <option
              value="Relative to Average Time (100 Average)"
            >
              
        Relative to Average Time (100 Average)
      
            </option>
            <option
              value="From Upload File"
            >
              
        From Upload File
      
            </option>
          </select>
        </div>
         
        <div
          class="mt-4"
        >
          <label
            class="block pb-1 select-none font-heading text-main-600"
            for="Number of Events to Count:"
          >
            Number of Events to Count:
          </label>
           
          <input
            class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
            id="Number of Events to Count:"
            max="100"
            min="1"
            type="number"
          />
        </div>
         
        <div
          class="mt-4"
        >
          <label
            class="block pb-1 select-none font-heading text-main-600"
            for="Courses: (Comma Separated)"
          >
            Courses: (Comma Separated)
          </label>
           
          <input
            class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
            id="Courses: (Comma Separated)"
            type="text"
          />
        </div>
         
        <div
          class="mt-4"
        >
          <label
            class="block pb-1 select-none font-heading text-main-600"
            for="More Information:"
          >
            More Information:
          </label>
           
          <input
            class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
            id="More Information:"
            type="text"
          />
        </div>
         
        <div
          class="mt-6 mb-5 text-left"
        >
          <label
            class="m-0 mt-1 text-lg transition ease-out delay-500 select-none text-md font-heading text-main"
          >
            <span
              class="mr-3 align-top"
            >
              Dynamic Event Results:
            </span>
             
            <input
              class="sr-only"
              type="checkbox"
            />
             
            <span
              class="inline-block w-4 h-4 mt-1 transition-all duration-300 ease-in-out border-2 border-main-300"
            />
          </label>
        </div>
         
        <button
          class="button-lg"
        >
          Create League
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`Update Form - Renders Correctly 1`] = `
<div>
  <vue-headful-stub
    description=""
    head="[object Object]"
    title="Munro - Edit League"
  />
   
  <div
    class="w-10/12 mx-auto md:w-3/4 xl:w-2/3 md:mt-2"
  >
    <h1
      class="my-2 text-3xl font-bold md:text-35xl font-heading text-main-700"
    >
      
    Edit League
  
    </h1>
     
    <div
      class="grid grid-cols-2 gap-8 pb-8 md:gap-6 lg:gap-8"
    >
      <form
        class="col-span-2"
      >
        <div>
          <label
            class="block pb-1 select-none font-heading text-main-600"
            for="Name:"
          >
            Name:
          </label>
           
          <input
            class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
            id="Name:"
            type="text"
          />
        </div>
         
        <div
          class="mt-4"
        >
          <label
            class="block pb-1 select-none font-heading text-main-600"
            for="Year:"
          >
            Year:
          </label>
           
          <input
            class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
            id="Year:"
            max="2050"
            min="0"
            type="number"
          />
        </div>
         
        <div
          class="mt-4"
        >
          <label
            class="block pb-1 select-none font-heading text-main-600"
            for="Description:"
          >
            Description:
          </label>
           
          <input
            class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
            id="Description:"
            type="text"
          />
        </div>
         
        <div
          class="mt-4"
        >
          <label
            class="block pb-1 select-none font-heading text-main-600"
            for="Website: (URL)"
          >
            Website: (URL)
          </label>
           
          <input
            class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
            id="Website: (URL)"
            type="url"
          />
        </div>
         
        <div
          class="mt-4"
        >
          <label
            class="block pb-1 select-none font-heading text-main-600"
            for="Coordinator:"
          >
            Coordinator:
          </label>
           
          <input
            class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
            id="Coordinator:"
            type="text"
          />
        </div>
         
        <div
          class="relative mt-4"
        >
          <label
            class="block pb-1 select-none font-heading text-main-600"
            for="Scoring Method:"
          >
            
    Scoring Method:
  
          </label>
           
          <svg
            class="absolute bottom-0 right-0 h-6 mr-2 text-main-500"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            style="margin-bottom: 0.625rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 9l-7 7-7-7"
            />
          </svg>
           
          <select
            class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none appearance-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
            id="Scoring Method:"
          >
            <option />
             
            <option
              value="Position Based (100 Max)"
            >
              
        Position Based (100 Max)
      
            </option>
            <option
              value="Position Based (99 Max)"
            >
              
        Position Based (99 Max)
      
            </option>
            <option
              value="Position Based (50 Max)"
            >
              
        Position Based (50 Max)
      
            </option>
            <option
              value="Position Based (100 Max, Double Points)"
            >
              
        Position Based (100 Max, Double Points)
      
            </option>
            <option
              value="Position Based (50 Max, Double Points)"
            >
              
        Position Based (50 Max, Double Points)
      
            </option>
            <option
              value="Position Based (99 Max, Reduced in a Draw)"
            >
              
        Position Based (99 Max, Reduced in a Draw)
      
            </option>
            <option
              value="Relative to Average Time (1000 Average)"
            >
              
        Relative to Average Time (1000 Average)
      
            </option>
            <option
              value="Relative to Average Time (100 Average)"
            >
              
        Relative to Average Time (100 Average)
      
            </option>
            <option
              value="From Upload File"
            >
              
        From Upload File
      
            </option>
          </select>
        </div>
         
        <div
          class="mt-4"
        >
          <label
            class="block pb-1 select-none font-heading text-main-600"
            for="Number of Events to Count:"
          >
            Number of Events to Count:
          </label>
           
          <input
            class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
            id="Number of Events to Count:"
            max="100"
            min="1"
            type="number"
          />
        </div>
         
        <div
          class="mt-4"
        >
          <label
            class="block pb-1 select-none font-heading text-main-600"
            for="Courses: (Comma Separated)"
          >
            Courses: (Comma Separated)
          </label>
           
          <input
            class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
            id="Courses: (Comma Separated)"
            type="text"
          />
        </div>
         
        <div
          class="mt-4"
        >
          <label
            class="block pb-1 select-none font-heading text-main-600"
            for="More Information:"
          >
            More Information:
          </label>
           
          <input
            class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
            id="More Information:"
            type="text"
          />
        </div>
         
        <div
          class="mt-6 mb-5 text-left"
        >
          <label
            class="m-0 mt-1 text-lg transition ease-out delay-500 select-none text-md font-heading text-main"
          >
            <span
              class="mr-3 align-top"
            >
              Dynamic Event Results:
            </span>
             
            <input
              class="sr-only"
              type="checkbox"
            />
             
            <span
              class="inline-block w-4 h-4 mt-1 transition-all duration-300 ease-in-out border-2 border-main-300"
            />
          </label>
        </div>
         
        <button
          class="button-lg"
        >
          Update League
        </button>
      </form>
    </div>
  </div>
</div>
`;
